--- a/experiments/configs/graphrag_query_expansion.yaml
+++ b/experiments/configs/graphrag_query_expansion.yaml
@@ -20,13 +20,11 @@ retrieval_config:
   graphrag_response_type: "Multiple Paragraphs"
 
   # GraphRAG model configuration (no LiteLLM proxy needed)
+  embedding_model: "text-embedding-3-small"
+  reranking: false
   graphrag_model_config:
-    chat_model: "claude-3-5-haiku-20241022"
-    chat_temperature: 0.0
-    chat_max_tokens: 4096
-    embedding_model: "all-MiniLM-L6-v2"
-    embedding_device: "cpu"
-    embedding_batch_size: 32
+    chat_model: "gpt-4o-mini"
+    embedding_model: "text-embedding-3-small"
 
   # BM25 settings (not used for graphrag, but required by schema)
   k1: 1.5
@@ -36,19 +34,19 @@ retrieval_config:
 llm_configs:
   # Expander LLM (generates query variants)
   expander:
-    provider: "anthropic"
-    model: "claude-3-5-haiku-20241022"
+    provider: "openai"
+    model: "gpt-4o-mini"
     temperature: 0.7  # Higher for diversity
     max_tokens: 256
-    api_key_env_var: "ANTHROPIC_API_KEY"
+    api_key_env_var: "OPENAI_API_KEY"
 
   # Generator LLM (generates final answer)
   generator:
-    provider: "anthropic"
-    model: "claude-3-5-haiku-20241022"
+    provider: "openai"
+    model: "gpt-4o-mini"
     temperature: 0.0  # Deterministic
     max_tokens: 512
-    api_key_env_var: "ANTHROPIC_API_KEY"
+    api_key_env_var: "OPENAI_API_KEY"
 
 # Query Expansion Hyperparameters
 hyperparameters:
@@ -91,7 +89,7 @@ evaluation_thresholds:
 # Tags and Metadata
 langfuse_tags:
   - "experiment:graphrag_query_expansion"
-  - "model:claude-3.5-haiku"
+  - "model:gpt-4o-mini"
   - "retrieval:graphrag_local"
   - "method:query-expansion"
 
