--- a/experiments/configs/langfuse_denseret.yaml
+++ b/experiments/configs/langfuse_denseret.yaml
@@ -2,7 +2,7 @@
 # This configuration runs a RAG pipeline with dense semantic retrieval and Claude 3.5 Haiku
 
 name: "dense_rag_langfuse_v1"
-description: "RAG pipeline with dense semantic retrieval and Claude 3.5 Haiku generation"
+description: "RAG pipeline with dense semantic retrieval and GPT-4o-mini generation"
 run_id: "exp-2026-01-10-dense_1"
 
 # Pipeline Configuration
@@ -18,11 +18,11 @@ retrieval_config:
 
 llm_configs:
   generator:
-    provider: "anthropic"
-    model: "claude-3-5-haiku-20241022"
+    provider: "openai"
+    model: "gpt-4o-mini"
     temperature: 0.0
     max_tokens: 512
-    api_key_env_var: "ANTHROPIC_API_KEY"
+    api_key_env_var: "OPENAI_API_KEY"
 
 # Langfuse Dataset Configuration
 langfuse_dataset_name: "financial_qa_benchmark_v1"
@@ -61,7 +61,7 @@ evaluation_thresholds:
 # Metadata and Tags
 langfuse_tags:
   - "experiment:dense"
-  - "model:claude-3.5-haiku"
+  - "model:gpt-4o-mini"
   - "retrieval:dense"
   - "embedding:all-MiniLM-L6-v2"
   - "env:development"
